# flagdeck

./: .gitignore  .miserc.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD_PARTY.md  deny.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  macos.yml  packages.yml  stable-release.yml
adapters/metasploit/: Cargo.toml  manifest.toml
adapters/metasploit/schemas/: input.schema.json  output.schema.json  ui.schema.json
adapters/metasploit/src/: lib.rs
apps/desktop/: .prettierignore  index.html  package.json  probe.html  tsconfig.json  vite.config.ts
apps/desktop/dist-isolation/: index.js
apps/desktop/src/: App.svelte  main.ts  probe.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: main-capability.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/autogenerated/: cancel_all_jobs.toml  cancel_intruder_campaign.toml  clear_jobs.toml  create_dictionary.toml  create_metasploit_console.toml  create_scope.toml  create_sqlmap_request.toml  delete_job.toml  diff_http.toml  ensure_target.toml  execute_metasploit_module.toml  export_project.toml  external_launcher_health.toml  get_http_message.toml  get_metasploit_options.toml  http_proxy_status.toml  import_project.toml  launch_external.toml  list_catalog.toml  list_dictionaries.toml  list_discoveries.toml  list_http_history.toml  list_import_packages.toml  list_intruder_attempts.toml  list_intruder_campaigns.toml  list_metasploit_entities.toml  list_payloads.toml  list_scopes.toml  metasploit_console_command.toml  metasploit_session_command.toml  metasploit_status.toml  open_http_browser_preview.toml  parse_multipart_message.toml  payload_source_health.toml  preview_artifact.toml  preview_job_file.toml  preview_job_log.toml  preview_payload.toml  repeat_http.toml  resume_intruder_campaign.toml  (+13 more)
apps/desktop/src-tauri/scripts/: rpm-post-remove.sh
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/tests/: config.test.ts  job-results.test.ts  preview.test.ts  state-macro.test.ts
config/: adapter-policy.toml  external-launchers.toml  payload-sources.toml  presets.toml  tool-paths.example.toml  tools.toml
config/tool-catalog/: categories.toml  wordlists.toml
config/tool-catalog/tools/: antsword.toml  arjun.toml  behinder-decryptor.toml  behinder.toml  curl.toml  cyberchef.toml  dddd.toml  dig.toml  ffuf.toml  fscan-web.toml  fscan.toml  git-dumper.toml  githacker.toml  gittools-dumper.toml  gittools-extractor.toml  hashcat.toml  (+19 more)
crates/flagdeck-adapter-host/: Cargo.toml
crates/flagdeck-adapter-host/src/: lib.rs
crates/flagdeck-adapter-protocol/: Cargo.toml
crates/flagdeck-adapter-protocol/src/: lib.rs
crates/flagdeck-cli-adapters/: Cargo.toml
crates/flagdeck-cli-adapters/src/: catalog.rs  lib.rs
crates/flagdeck-core/: Cargo.toml
crates/flagdeck-core/src/: catalog_api.rs  external.rs  http.rs  intruder.rs  lib.rs  metasploit.rs  payloads.rs
crates/flagdeck-core/tests/: catalog_launch.rs  shiro_launch.rs
crates/flagdeck-domain/: Cargo.toml
crates/flagdeck-domain/src/: lib.rs
crates/flagdeck-exec/: Cargo.toml
crates/flagdeck-exec/src/: lib.rs
crates/flagdeck-storage/: Cargo.toml
crates/flagdeck-storage/src/: lib.rs
docs/: MACOS_PREVIEW.md  RELEASING.md  TOOL_CATALOG.md  TOOL_PACKS.md  stable-release.md
docs/adr/: 0001-sqlite-engine.md  0002-tauri-trust-boundary.md  0003-mitmproxy-streaming.md  0004-metasploit-rpc.md  0005-supervisor-backend.md  0006-core-contracts-and-storage.md  0007-product-tauri-shell.md  0008-r2-vertical-alpha.md  0009-r3-reliable-orchestration.md  0010-r4-http-beta-boundaries.md  0011-r5-metasploit-product-boundaries.md  0012-r6-intruder-upload-boundaries.md  0013-r7-stable-release-boundaries.md
release/: FlagDeck-1.0.0-signing-key.asc
schemas/: adapter-entity.schema.json  artifact.schema.json  command-spec.schema.json  discovery.schema.json  http-message.schema.json  intruder-attempt.schema.json  intruder-campaign.schema.json  job.schema.json  state-chain-run.schema.json  target-scope.schema.json
scripts/: fedora_lifecycle_gate.py  finalize_release.py  generate_sbom.py  run_release_audits.py  sign_rpm.py
spikes/: DEPENDENCIES.md  ENVIRONMENT.md  R0_REPORT.md  README.md
spikes/metasploit-rpc/: README.md  pyproject.toml
spikes/metasploit-rpc/launcher/: Cargo.toml
spikes/metasploit-rpc/launcher/src/: main.rs
spikes/metasploit-rpc/src/flagdeck_msf/: __init__.py  credential.py  gate.py  rpc.py
spikes/metasploit-rpc/tests/: test_credential.py  test_rpc.py
spikes/mitm-streaming/: README.md  pyproject.toml
spikes/mitm-streaming/src/flagdeck_mitm/: addon.py  capture.py  gate.py
spikes/mitm-streaming/tests/: test_capture.py
spikes/sqlite-safety/: Cargo.toml  README.md
spikes/sqlite-safety/src/: lib.rs  main.rs
spikes/sqlite-safety/tests/: gate.rs
spikes/supervisor-cgroup/: Cargo.toml  README.md
spikes/supervisor-cgroup/src/: main.rs
spikes/tauri-security/: .prettierignore  README.md  index.html  package.json  pnpm-lock.yaml  probe.html
spikes/tauri-security/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
spikes/tauri-security/src-tauri/capabilities/: main-capability.json
spikes/tauri-security/src-tauri/permissions/autogenerated/: read_fixture.toml
spikes/tauri-security/src-tauri/src/: lib.rs  main.rs
tests/contract/: test_adapter_protocol.py
tests/gui/: desktop-memory-gate.mjs  release-gate.mjs  webdriver.mjs
tests/performance/r3-gate/: Cargo.toml
tests/performance/r3-gate/src/: main.rs
tests/performance/r7-gate/: Cargo.toml
tests/performance/r7-gate/src/: main.rs
tests/release/: test_signing_tools.py
workers/mitmproxy/: flagdeck_worker_addon.py  pyproject.toml
workers/mitmproxy/src/flagdeck_mitm/: __init__.py  adapter.py  addon.py  fixture.py
workers/mitmproxy/tests/: test_adapter.py  test_addon_contract.py
(+48 files in other folders)
