[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/flagdeck-adapter-protocol",
  "crates/flagdeck-adapter-host",
  "crates/flagdeck-cli-adapters",
  "crates/flagdeck-core",
  "crates/flagdeck-domain",
  "crates/flagdeck-exec",
  "crates/flagdeck-storage",
  "adapters/metasploit",
  "spikes/sqlite-safety",
  "spikes/tauri-security/src-tauri",
  "spikes/metasploit-rpc/launcher",
  "spikes/supervisor-cgroup",
  "tests/performance/r3-gate",
  "tests/performance/r7-gate",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

[workspace.dependencies]
anyhow = "1.0.103"
fs2 = "0.4.3"
nix = "0.30.1"
rusqlite = "0.40.1"
schemars = "1.2.1"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
thiserror = "2.0.17"
tokio = "1.52.3"
toml = "1.1.2"
ts-rs = "12.0.1"
url = "2.5.8"
uuid = "1.23.4"
zip = { version = "8.0.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
zeroize = "1.8.2"
