[package]
name = "flagdeck-metasploit-adapter"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lib]
name = "flagdeck_metasploit_adapter"

[[bin]]
name = "flagdeck-adapter-metasploit"
path = "src/bin/adapter.rs"

[[bin]]
name = "flagdeck-msf-credential-launcher"
path = "src/bin/launcher.rs"

[dependencies]
anyhow.workspace = true
flagdeck-adapter-protocol = { path = "../../crates/flagdeck-adapter-protocol" }
flagdeck-domain = { path = "../../crates/flagdeck-domain" }
native-tls = "0.2.18"
nix = { workspace = true, features = ["process", "signal", "socket", "user"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
