[package]
name = "flagdeck-adapter-protocol"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
flagdeck-domain = { path = "../flagdeck-domain" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
