[package]
name = "flagdeck-core"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
flagdeck-adapter-host = { path = "../flagdeck-adapter-host" }
flagdeck-adapter-protocol = { path = "../flagdeck-adapter-protocol" }
flagdeck-cli-adapters = { path = "../flagdeck-cli-adapters" }
flagdeck-domain = { path = "../flagdeck-domain" }
flagdeck-exec = { path = "../flagdeck-exec" }
flagdeck-storage = { path = "../flagdeck-storage" }
native-tls = "0.2.14"
nix = { workspace = true, features = ["process", "signal", "user"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "rt", "sync", "time"] }
toml.workspace = true
ts-rs = { workspace = true, features = ["no-serde-warnings", "serde-compat"] }
url.workspace = true
uuid = { workspace = true, features = ["v5"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
