[package]
name = "flagdeck-domain"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ts-rs = { workspace = true, features = ["no-serde-warnings", "serde-compat"] }
uuid = { workspace = true, features = ["v4"] }

[lints]
workspace = true
