[package]
name = "flagdeck-exec"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
flagdeck-domain = { path = "../flagdeck-domain" }
nix = { workspace = true, features = ["process", "signal", "user"] }
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "process", "rt", "time"] }
uuid = { workspace = true, features = ["v4"] }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
