[package]
name = "flagdeck-storage"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
flagdeck-domain = { path = "../flagdeck-domain" }
fs2.workspace = true
nix = { workspace = true, features = ["fs"] }
rusqlite = { workspace = true, features = ["backup", "bundled"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid = { workspace = true, features = ["v4"] }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
