[package]
name = "sqlite-safety"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.100"
fs2 = "0.4.3"
nix = { version = "0.30.1", features = ["fs", "process", "signal"] }
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tempfile = "3.23.0"

[lints]
workspace = true
