[package]
name = "supervisor-cgroup"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1.0.103"
nix = { version = "0.30.1", features = ["fs", "process", "resource", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
signal-hook = "0.3.18"

[lints]
workspace = true
