[project]
name = "flagdeck-mitm-worker"
version = "1.0.0"
description = "FlagDeck bounded mitmproxy Adapter v1 worker"
requires-python = ">=3.12,<3.13"
license = { text = "MIT OR Apache-2.0" }
dependencies = [
  "mitmproxy==12.2.3",
]

[tool.uv]
# mitmproxy 12.2.3 caps these transitive patch releases. The patched versions
# preserve the public APIs used by the worker and close the audited issues.
override-dependencies = [
  "msgpack==1.2.1",
  "tornado==6.5.7",
]

[dependency-groups]
dev = [
  "brotli==1.2.0",
  "cryptography==48.0.1",
  "mypy==1.19.1",
  "pytest==9.0.3",
  "ruff==0.14.13",
]

[project.scripts]
flagdeck-mitm-gate = "flagdeck_mitm.gate:main"
flagdeck-mitm-worker = "flagdeck_mitm.adapter:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flagdeck_mitm"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["flagdeck_mitm"]
