[package]
name = "tauri-security-spike"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[build-dependencies]
tauri-build = { version = "2.6.3", features = ["isolation"] }

[dependencies]
tauri = { version = "2.11.5", default-features = false, features = ["compression", "dynamic-acl", "isolation", "wry"] }
tempfile = "3.27.0"

[lints]
workspace = true
