[package]
name = "flagdeck-r3-gate"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
flagdeck-adapter-host = { path = "../../../crates/flagdeck-adapter-host" }
flagdeck-adapter-protocol = { path = "../../../crates/flagdeck-adapter-protocol" }
flagdeck-domain = { path = "../../../crates/flagdeck-domain" }
flagdeck-exec = { path = "../../../crates/flagdeck-exec" }
flagdeck-storage = { path = "../../../crates/flagdeck-storage" }
nix = { workspace = true, features = ["resource"] }
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt", "time"] }

[lints]
workspace = true
