[package]
name = "flagdeck-r7-gate"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
flagdeck-domain = { path = "../../../crates/flagdeck-domain" }
flagdeck-exec = { path = "../../../crates/flagdeck-exec" }
flagdeck-storage = { path = "../../../crates/flagdeck-storage" }
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints]
workspace = true
